config/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-hello-service-app
  labels:
    app: quarkus-hello-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ztsc-quarkus-hello-service-app
  template:
    metadata:
      labels:
        app: ztsc-quarkus-hello-service-app
    spec:
      containers:
        - name: ztsc-quarkus-hello-service-app
          image: quay.io/ifont/sigstore-demo-app:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
